[gd_scene load_steps=22 format=3 uid="uid://di1np6mf845jg"]

[ext_resource type="Script" path="res://scenes/helicopter.gd" id="1_7xf6l"]
[ext_resource type="Script" path="res://scenes/camera_base.gd" id="2_4wjwm"]
[ext_resource type="PackedScene" uid="uid://dscu7s2k73eyy" path="res://scenes/helicopter_ui.tscn" id="2_y1icg"]

[sub_resource type="Curve" id="Curve_k23mr"]

[sub_resource type="BoxMesh" id="BoxMesh_u6syh"]
size = Vector3(1, 1, 3)

[sub_resource type="CylinderMesh" id="CylinderMesh_0j1pu"]
top_radius = 0.1
bottom_radius = 0.1
height = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_o18ao"]
size = Vector3(0.765, 0.465, 1.005)

[sub_resource type="CylinderMesh" id="CylinderMesh_y8uhb"]
height = 0.98

[sub_resource type="CylinderMesh" id="CylinderMesh_207jq"]
top_radius = 0.25
bottom_radius = 0.25
height = 1.973

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_y6wom"]
points = PackedVector3Array(-0.5, -0.5, -1.45426, 0.5, 0.5, 1.45426, 0.5, -0.5, 1.45426, 0.5, 0.5, -1.45426, -0.5, 0.5, 1.45426, -0.5, -0.5, 1.45426, 0.5, -0.5, -1.45426, -0.5, 0.5, -1.45426)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_74vm5"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_vj4yl"]
material = SubResource("StandardMaterial3D_74vm5")
size = Vector3(0.1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6mwk4"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cnhqq"]
material = SubResource("StandardMaterial3D_6mwk4")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="PrismMesh" id="PrismMesh_bhs0g"]
size = Vector3(0.1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sx5a3"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_t7pl5"]
material = SubResource("StandardMaterial3D_sx5a3")
size = Vector3(3.535, 0.215, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xvydi"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_518yp"]
material = SubResource("StandardMaterial3D_xvydi")
size = Vector3(0.1, 0.215, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xl41o"]
albedo_color = Color(1, 0.592157, 0.121569, 1)

[sub_resource type="SphereMesh" id="SphereMesh_7qf8f"]
material = SubResource("StandardMaterial3D_xl41o")

[node name="Helicopter" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
script = ExtResource("1_7xf6l")
engine_power_curve = SubResource("Curve_k23mr")

[node name="HelicopterUi" parent="." instance=ExtResource("2_y1icg")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9.29681e-08, 0, -2.12686)
mesh = SubResource("BoxMesh_u6syh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 4.27399e-09, 2.24181e-08, -2.26267e-08, 0.0574595, 0.998347, 2.9789e-09, -0.998347, 0.0574595, 8.74229e-08, 0.363771, -3.19684)
mesh = SubResource("CylinderMesh_0j1pu")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body/MeshInstance3D"]
transform = Transform3D(-1, -2.26267e-08, 8.4444e-08, 8.30043e-08, 0.0574596, 0.998349, -2.74414e-08, 0.998349, -0.0574596, -1.71683e-07, -3.15692, 0.31815)
mesh = SubResource("BoxMesh_o18ao")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-4.37114e-08, 1, -8.74228e-08, -1, -4.37114e-08, -8.74228e-08, -8.74228e-08, 8.74228e-08, 1, -1.22392e-07, 0, 1.4)
mesh = SubResource("CylinderMesh_y8uhb")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 8.44439e-08, 6.47961e-08, -8.44439e-08, 0.258819, 0.965926, 6.47961e-08, -0.965926, 0.258819, 0, 0.4, 0)
mesh = SubResource("CylinderMesh_207jq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9.29681e-08, 0, -2.12686)
shape = SubResource("ConvexPolygonShape3D_y6wom")

[node name="TailRotor" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0999998, 0.523354, 3.39346)

[node name="TailRotorMesh" type="Node3D" parent="TailRotor"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="TailRotor/TailRotorMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.138229, 0, 0)
mesh = SubResource("BoxMesh_vj4yl")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="TailRotor/TailRotorMesh/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.47035e-06, 0.00118577, 0.530716)
mesh = SubResource("BoxMesh_cnhqq")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="TailRotor/TailRotorMesh/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.47035e-06, 0.00118577, -0.544407)
mesh = SubResource("BoxMesh_cnhqq")
skeleton = NodePath("../../../..")

[node name="MainRotor" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9.29681e-08, 0.80001, -2.12686)

[node name="MainRotorMesh" type="Node3D" parent="MainRotor"]
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="MainRotor/MainRotorMesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.1, 0)
mesh = SubResource("PrismMesh_bhs0g")

[node name="Prop" type="MeshInstance3D" parent="MainRotor/MainRotorMesh/MeshInstance3D"]
transform = Transform3D(1, 2.84217e-14, 0, 0, 1, -1.49012e-08, -3.55271e-15, 1.49012e-08, 1, 1.763, 3.57628e-07, 0.5)
mesh = SubResource("BoxMesh_t7pl5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MainRotor/MainRotorMesh/MeshInstance3D/Prop"]
transform = Transform3D(1, 5.68434e-14, -1.77636e-15, 0, 1, -4.47035e-08, -8.88178e-15, 4.47035e-08, 1, 1.83167, 5.96046e-08, 1.19209e-07)
mesh = SubResource("BoxMesh_518yp")

[node name="Prop2" type="MeshInstance3D" parent="MainRotor/MainRotorMesh/MeshInstance3D"]
transform = Transform3D(-1, -8.99286e-08, -6.56244e-09, 8.22607e-08, -0.939693, 0.34202, -3.6924e-08, 0.34202, 0.939693, -1.737, -1.78814e-07, 0.5)
mesh = SubResource("BoxMesh_t7pl5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MainRotor/MainRotorMesh/MeshInstance3D/Prop2"]
transform = Transform3D(1, 5.68434e-14, -1.77636e-15, 0, 1, -4.47035e-08, -8.88178e-15, 4.47035e-08, 1, 1.83167, 5.96046e-08, 1.19209e-07)
mesh = SubResource("BoxMesh_518yp")

[node name="CursorPointer" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
mesh = SubResource("SphereMesh_7qf8f")

[node name="Camera_Base" type="Node3D" parent="." node_paths=PackedStringArray("helicopter", "CAMERA_CONTROLLER")]
script = ExtResource("2_4wjwm")
helicopter = NodePath("..")
CAMERA_CONTROLLER = NodePath("Camera3D")

[node name="Camera3D" type="Camera3D" parent="Camera_Base"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 6)
